# RealSR-NCNN-Android

RealSR-NCNN-Android-CLI/MNN-SR/src/main/jni/: CMakeLists.txt  main.cpp
RealSR-NCNN-Android-CLI/Resize/src/main/jni/: CMakeLists.txt  main.cpp  mosaic_detect.cpp  mosaic_detect.h
RealSR-NCNN-Android-CLI/Waifu2x/src/main/jni/: waifu2x.cpp
RealSR-NCNN-Android-CLI/assets/scripts/: drift-zoom-demo.html  report.md  report_viewer2.html  test-all.bat  test-mnnsr.bat  test-windows.md
RealSR-NCNN-Android-CLI/common/: utils.hpp
